--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@yarnpkg/sdks": "^2.6.0",
+    "onnxruntime-web": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "twin.macro": "^2.8.2"
