--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@yarnpkg/sdks": "^2.6.0",
     "onnxruntime-web": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,9 +22,12 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@emotion/babel-plugin": "^11.7.2",
+    "@types/ndarray": "^1.0.11",
+    "@types/numjs": "^0.16.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "@yarnpkg/sdks": "^2.6.0",
     "babel-plugin-macros": "^3.1.0",
     "prettier": "^2.6.1",
     "typescript": "^4.6.3",
